@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-vcs-23.3.9999.ebuild 10439 RMD160 97bc213e09f3d3ab36bb2b75f0a87a95db835976 SHA1 9f99a71de87e7da5be80207593ac6fbd79581f30 SHA256 c11a8e1807c04fd48de8bd20b77d682e708a29a8e3cee7af8657ad8223381c04
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 10955 RMD160 ee2ea3a17f24183c248b3e9d80a80590dea2799a SHA1 daad39daf70927e47dde2a91e4a74056ac9a19d8 SHA256 5d4ea2ac3280b3a6058396f8e500e94990bad89025fd5020d6b8d9113d8dd150
-MISC ChangeLog 3158 RMD160 31a95925f6b63dffb285332d225736f1f717f1a6 SHA1 bf0d53a131faf2fac479c7f48920f2a17a858eda SHA256 26ee273a6c9972ab3dd29c45636170284ac8e3dd1132700cf1561d90b81354d1
+EBUILD emacs-vcs-23.3.9999.ebuild 10453 RMD160 34397f926e0b7a20ea2d07b2e9916bb6e8571602 SHA1 d469324d1dafb53a34acb04f80d00b590dffbf54 SHA256 9bd929b56a261c4029fec81186530c645322ed4e41ddba5ca98e7c5867fb6bf3
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10968 RMD160 40b2436ee6ccffa5dcd7d7e3146c634e83b8384c SHA1 9b82f8dc0acd4bfe8c081a4f0d7173d982aa06d1 SHA256 75e3e92eb4f5cabac6a24c09a9695aca075b9535e726856f947dd2488b38595b
+MISC ChangeLog 3293 RMD160 b83fa5889f7e4588e03c27dbd6a5f9100ad9c9c6 SHA1 8bf4eb7ce8e6019c81fe2c8ec00415e7477b55f3 SHA256 f831cf940efcd10deec80786fb33cf30d9d164f826e5f593d04302ae2d9047f5
 MISC metadata.xml 2106 RMD160 be033c20ddf8d50f045e59552c1cccd3ce829149 SHA1 7e92f2fc679fade0f4b3a4c3d587a6ec8757437d SHA256 ae9bc43d98770006a0792f92b173911e1357135f82f33156f121206f51948e65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4gfw0ACgkQOeoy/oIi7uwkMACggkuY32lkd9Ihf9YdP28Fw2uR
-CCwAoLJthSL7IGKMPQR1ZSYVMl7NbL6s
-=zvy2
+iEYEARECAAYFAk44PvcACgkQOeoy/oIi7uyV6ACgv/vfqET14k3FrNXDoQpp3Cig
+ZfUAoNxhcBg3kaMUGLpRUjX+QxLeZtYu
+=8k0k
 -----END PGP SIGNATURE-----
